# shop

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
database/: database.py
modules/: auth.py
routes/: about_route.py  main_route.py  secret_route.py  sponsors_route.py
routes/auth/: log_in_route.py  sign_in_route.py
routes/shop/: shop_route.py
static/script/: clicker.js
static/styles/: style.css
templates/: 404.html  501.html  about.html  footer.html  index.html  log_in.html  secret.html  shop.html  sign_in.html  sponsors.html  topnav.html
