[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Ultrageopro1966 <me@ultrageopro.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
pyjwt = "^2.8.0"
supabase = "^2.5.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
